menu z-index fix

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body {
 @media (max-width: 56em) {
 
   #rosmaro-logo {
+    z-index: 1;
     max-width: 100%;
     padding: 0px 10px;
   }
@@ -116,6 +117,7 @@ body {
   }
 
   .nav-item {
+    z-index: 2;
     text-align: right;
     width: 100%;
     display: block;
